designed mypage and catpage, updated backimage

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,14 @@ body {
   color: #008b8b;
 }
 
+.align-center {
+  text-align: center;
+}
+
+.align-right {
+  text-align: end;
+}
+
 .main_icon {
   width: 100px;
   height: 100px;
