--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -67,7 +67,7 @@
   <%= form.submit %>
 <% end %>
 
-<%= link_to '戻る', 'javascript:history.back()' %>
+<%= link_to '戻る', 'javascript:history.back()', class: "button is-light is-rounded m-4" %>
 
 <script>
   document.addEventListener("turbolinks:load", function() {
