--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -45,4 +45,4 @@
   <%= form.submit %>
 <% end %>
 
-<%= link_to '戻る', blogs_path %>
+<%= link_to '戻る', 'javascript:history.back()', class: "button is-light is-rounded m-4" %>
