--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
   </p>
 </div>
 
-<div class="center">
+<div class="align-center my-6">
 <%= link_to select_symptom_path, class: "button is-rounded is-link is-light is-medium is-focused" do %>
   <span class="icon"><i class="fas fa-magnifying-glass"></i></span>
   <span>症状から調べる</span>
