--- a/app/assets/stylesheets/cats.scss
+++ b/app/assets/stylesheets/cats.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the cats controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.user_icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
