designed user and cat new, edit page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -15,14 +15,15 @@
 }
 .box-child {
   height: auto;
-  margin: 0 auto;
+  margin: 0 2%;
 }
 
 .card-cat {
-  width: 250px;
+  width: 215px;
 }
 
 /* 体験記リストへ */
 .font-lil-bigger {
   font-size: 1.1rem;
+  font-weight: bold;
 }
