--- a/app/views/devise/registrations/edit_password.html.erb
+++ b/app/views/devise/registrations/edit_password.html.erb
@@ -1,31 +1,36 @@
-<h2><%= t('.title', resource: resource_name.to_s.humanize) %></h2>
+<h4 class="mb-5"><%= t('.title', resource: resource_name.to_s.humanize) %></h4>
 
 <%= form_for(resource, as: resource_name, url: update_password_path, html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="field m-4">
+    <%= f.label :current_password, class: "label" %>
+    <div class="control">
+      <%= f.password_field :current_password, autocomplete: "current-password", class: "input", placeholder: "現在のパスワードを入力してください" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="field m-4">
+    <%= f.label :password, class: "label" %>
+    <div class="control">
+      <%= f.password_field :password, autocomplete: "new-password", class: "input", placeholder: "******" %>
+    </div>
     <% if @minimum_password_length %>
-      <br />
       <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
     <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="field m-4">
+    <%= f.label :password_confirmation, class: "label" %>
+    <div class="control">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input", placeholder: "******" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit t('.update') %>
+  <div class="actions align-right">
+    <%= f.submit t('.update'), class: "button is-info m-5" %>
   </div>
 <% end %>
 
 
-<%= link_to t('devise.shared.links.back'), user_path(current_user.id) %>
+<%= link_to '戻る', 'javascript:history.back()', class: "button is-light is-rounded m-2" %>
