--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @blog, url: choose_new_or_edit ) do |form| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
-      <h2><%= @blog.errors.count %>件のエラーがあります。</h2>
+      <h5 class="has-text-danger-dark"><%= @blog.errors.count %>件のエラーがあります。</h5>
       <ul>
 
       <% @blog.errors.full_messages.each do |msg| %>
