--- a/app/views/cats/confirm.html.erb
+++ b/app/views/cats/confirm.html.erb
@@ -1,4 +1,4 @@
-<h3>以下の内容で、登録しますか？</h3>
+<h4>以下の内容で、登録しますか？</h4>
 
 <%= form_with(model: @cat, url: cats_path, local: true) do |form| %>
   <%= form.hidden_field :name %>
@@ -7,13 +7,25 @@
   <%= form.hidden_field :birthday %>
   <%= form.hidden_field :breed_id %>
 
-  <p><%= form.label :name %>：<%= @cat.name %></p>
-  <p><%= form.label :image %>：<%= image_tag @cat.image.url, class: "main_icon" if @cat.image.url %></p>
-  <p><%= form.label :introduction %>：<%= @cat.introduction %></p>
-  <p><%= form.label :birthday %>：<%= @cat.birthday.strftime("%Y/%m/%d") if @cat.birthday %></p>
-  <p><%= form.label :breed_name %>：<%= @cat.breed.name %></p>
-  <%= form.submit %>
+  <p class="label mt-6 ml-4"><%= form.label :name %></p>
+  <p class="ml-4"><%= @cat.name %></p>
 
-  <%= form.submit '戻る', name: 'back' %>
+  <p class="label mt-6 ml-4"><%= form.label :image %></p>
+  <p class="ml-4"><%= image_tag @cat.image.url, class: "main_icon" if @cat.image.url %></p>
+  
+  <p class="label mt-6 ml-4"><%= form.label :introduction, class: "label mt-6" %></p>
+  <p class="ml-4"><%= @cat.introduction %></p>
+  
+  <p class="label mt-6 ml-4"><%= form.label :birthday %></p>
+  <p class="lml-4"><%= @cat.birthday.strftime("%Y/%m/%d") if @cat.birthday %></p>
+  
+  <p class="label mt-6 ml-4"><%= form.label :breed_name %></p>
+  <p class="ml-4"><%= @cat.breed.name %></p>
+  
+  <div class="actions align-right">
+    <%= form.submit class: "button is-info m-5" %>
+  </div>
+
+  <%= form.submit '戻る', name: 'back', class: "button is-light is-rounded ml-4" %>
 
 <% end %>
