--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,25 +6,33 @@
 
     <div class="field">
       <%= f.label :name, class: "label" %>
-      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input", placeholder: "登録したい名前を入力してください。" %>
+      <div class="control">
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input", placeholder: "登録したい名前を入力してください" %>
+      </div>
     </div>
 
     <div class="field">
       <%= f.label :email, class: "label" %>
-      <%= f.email_field :email, autocomplete: "email", class: "input", placeholder: "メールアドレスを入力してください。" %>
+      <div class="control">
+        <%= f.email_field :email, autocomplete: "email", class: "input", placeholder: "メールアドレスを入力してください" %>
+      </div>
     </div>
 
     <div class="field">
       <%= f.label :password, class: "label" %>
+      <div class="control">
+        <%= f.password_field :password, autocomplete: "new-password", class: "input", placeholder: "******" %>
+      </div>
       <% if @minimum_password_length %>
       <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
       <% end %>
-      <%= f.password_field :password, autocomplete: "new-password", class: "input", placeholder: "******"  %>
     </div>
 
     <div class="field">
       <%= f.label :password_confirmation, class: "label" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input", placeholder: "******" %>
+      <div class="control">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input", placeholder: "******" %>
+      </div>
     </div>
 
     <div class="actions">
